// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useBind should get value when changed input 1`] = `
<div>
  <p>Input: Type a here...</p> <input type="text"> <button>Reset</button>
</div>
`;

exports[`useBind should get value when changed select 1`] = `
<div>
  <div><select multiple="multiple">
      <option value="apple">apple</option>
      <option value="orange">orange</option>
      <option value="strawberry">Strawberry</option>
    </select></div>
  <p>select : apple</p>
</div>
`;

exports[`useBind should reset value when method 1`] = `
<div>
  <p>Input: Set value</p> <input type="text"> <button>Reset</button>
</div>
`;
